Fixed menu items padding on small displays

--- a/css/ddbasic.styles.css
+++ b/css/ddbasic.styles.css
@@ -1584,7 +1584,7 @@ button.button {
 @media only screen and (max-width: 480px) {
   /* line 57, ../sass/framework/_navigation.scss */
   .topbar-menu .menu-item {
-    padding: 10px 12px;
+    padding: 10px 9px;
   }
 }
 @media only screen and (max-width: 768px) {
