--- a/sass/framework/_navigation.scss
+++ b/sass/framework/_navigation.scss
@@ -55,7 +55,7 @@
   /* Media queries */
   @include small() {
     .menu-item {
-      padding: 10px 12px;
+      padding: 10px 9px;
     }
   }
 
